# madhatter

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/source/: madhatter.rst  modules.rst
madhatter/: __init__.py  __main__.py  benchmark.py  benchmark.pyi  loaders.py  metrics.py  metrics.pyi  models.py  models.pyi  utils.py  utils.pyi
notebooks/: demo.ipynb  demo.py  experiment.py  prototype.ipynb
notebooks/results/: creative.parquet  legal.parquet  mgt_results_40000_small-117M.parquet  mgt_results_40000_xl-1542M-k40.parquet  pgauthorship_1000.parquet  pgauthorship_30.parquet  pgauthorship_35.parquet  pgauthorship_50.parquet  wp.parquet
